BusOne02/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Identifier_vod__c</fullName>
        <description>Additional Account Identifier</description>
        <label>Account Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Search_LastFirst_vod__c</fullName>
        <description>If Person account, set the field value as lastname&amp;firstname no space</description>
        <formula>IF( IsPersonAccount ,SUBSTITUTE( LastName,&quot; &quot;,&quot;&quot;) &amp; SUBSTITUTE(FirstName,&quot; &quot;,&quot;&quot;),Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Search LastFirst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account type (e.g. Plan Provider, Network or Specialty Org). Used by MCO and MCO Plan accounts.</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACO</fullName>
                </value>
                <value>
                    <fullName>Admin Org</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>IDN</fullName>
                </value>
                <value>
                    <fullName>MCO</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>PBM</fullName>
                </value>
                <value>
                    <fullName>Plan Provider</fullName>
                </value>
                <value>
                    <fullName>Specialty Org</fullName>
                </value>
                <value>
                    <fullName>Specialty Provider</fullName>
                </value>
                <value>
                    <fullName>Stand-Alone Medicare</fullName>
                </value>
                <value>
                    <fullName>State Medicaid</fullName>
                </value>
                <value>
                    <fullName>Tricare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Commercial_Plan_Lives_Rx__c</fullName>
        <description>To get summarised commercial plan lives from the plan product object.</description>
        <label>Commercial Plan Lives Rx</label>
        <summarizedField>BOT_Plan_Product__c.BOT_Product_Lives_Rx__c</summarizedField>
        <summaryFilterItems>
            <field>BOT_Plan_Product__c.BOT_Channel__c</field>
            <operation>equals</operation>
            <value>Commercial</value>
        </summaryFilterItems>
        <summaryForeignKey>BOT_Plan_Product__c.BOT_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_Id__c</fullName>
        <description>To store BOT Entity Id. It is used for internal reference, it is unique also using as external Id. It is a hidden field and will not appear in page layout.</description>
        <externalId>true</externalId>
        <label>Entity Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_Level__c</fullName>
        <description>To store the entity level like National / Regional / Local</description>
        <label>Entity Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>State Medicaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Is_BOT_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is created by BusinessOne Technologies. It indicates that record is created by BOT.</description>
        <label>Is BOT Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOT_Medicare_Plan_Lives_Rx__c</fullName>
        <description>To get summarised medicare Rx lives from plan product object</description>
        <label>Medicare Plan Lives Rx</label>
        <summarizedField>BOT_Plan_Product__c.BOT_Product_Lives_Rx__c</summarizedField>
        <summaryFilterItems>
            <field>BOT_Plan_Product__c.BOT_Channel__c</field>
            <operation>equals</operation>
            <value>Medicare</value>
        </summaryFilterItems>
        <summaryForeignKey>BOT_Plan_Product__c.BOT_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BOT_Parent_Entity_ID__c</fullName>
        <description>To store the BOT parent entity ID. It is a hidden filed and used for BOT internal data reference.</description>
        <label>Parent Entity  ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Total_Lives_Rx__c</fullName>
        <description>To get total lives covered by the selected Account from the plan product.</description>
        <label>Total Lives Rx</label>
        <summarizedField>BOT_Plan_Product__c.BOT_Product_Lives_Rx__c</summarizedField>
        <summaryForeignKey>BOT_Plan_Product__c.BOT_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>Picklist of the professional&apos;s (Person Account) credentials. Edit the picklist to change the available credentials.  Used by HMS data load.</description>
        <label>Credentials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RNP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Master_Status_vod__c</fullName>
        <description>Corresponds to the validation status of a record in the customer master. This field should not be modified.</description>
        <label>Customer Master Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staging_vod</fullName>
                </value>
                <value>
                    <fullName>Inactive_vod</fullName>
                </value>
                <value>
                    <fullName>Valid_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Under_Review_vod</fullName>
                </value>
                <value>
                    <fullName>Rejected_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formatted_Name_vod__c</fullName>
        <description>This formula field is used to display a well formatted person account name in (lastname, firstname suffix) format.</description>
        <formula>IF( IsPersonAccount ,
IF( AND(RecordType.DeveloperName == &apos;Business_Professional_vod&apos;, NOT(ISBLANK(Primary_Parent_vod__r.Name))), LastName &amp; &quot;, &quot; &amp; FirstName &amp; &quot; (&quot; &amp;  Primary_Parent_vod__r.Name &amp; &quot;)&quot; ,
LastName &amp; &quot;, &quot; &amp; FirstName &amp; IF(ISNULL(Suffix_vod__c), &quot;&quot;, &quot; &quot;&amp;Suffix_vod__c)),
Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furigana_vod__c</fullName>
        <description>Field for Japanese users input Katakana or Hiragana in order to search for accounts based on Furigana</description>
        <label>Furigana</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Id_vod__c</fullName>
        <description>Payer Id for Formulary for the Rep</description>
        <label>Payer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Parent_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary parent of the account, as designated by the Account Hierarchy. The primary parent must be a business account.</description>
        <label>Primary Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Primary Parent Test</relationshipLabel>
        <relationshipName>Primary_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suffix_vod__c</fullName>
        <description>Suffix.  Used for person accounts.</description>
        <label>Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Sent_Message_vod__c</fullName>
        <description>The number of the messages have been sent</description>
        <label>Total Sent Message</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>BOT_Commercial</fullName>
        <active>true</active>
        <description>(BOT) To store commercial plans.</description>
        <label>BOT Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Employer</fullName>
        <active>true</active>
        <description>(BOT) To store Employer plans.</description>
        <label>BOT Employer</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_PBM</fullName>
        <active>true</active>
        <description>(BOT) To store PBM plans.</description>
        <label>BOT PBM</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Specialty_Provider</fullName>
        <active>true</active>
        <description>(BOT) To store Specialty Providers.</description>
        <label>BOT Specialty Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_State_Medicaid</fullName>
        <active>true</active>
        <description>(BOT) To store State Medicaid plans.</description>
        <label>BOT State Medicaid</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Tricare</fullName>
        <active>true</active>
        <description>(BOT) To store Tricare plans.</description>
        <label>BOT Tricare</label>
    </recordTypes>
</CustomObject>